<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Polibrands Opinion</string>
    <string name="app_name_2">KAT Opinion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="company">Polibrands</string>
	<string name="research">research</string>
	<string name="analyze">analyze</string>
	<string name="lead">lead</string>
	<string name="upload_on_server">Upload on Server</string>
	<string name="admin_login">Admin Login</string>
	<string name="guest_login">Guest Login</string>
	<string name="enter_username">USERNAME</string>
	<string name="enter_password">PASSWORD</string>
	<string name="login">login</string>
	<string name="valid_username">admin</string>
	<string name ="valid_password">admin</string>
	<string name="login_failed">Username or password is incorrect</string>
	<string name ="admin">Administrator</string>
	<string name ="guest">Guest ID</string>
	<string name ="rajasthan">Rajasthan</string>
	<string name = "constituency">constituency</string>
	<string name="click_it"> Click it</string>
	<string name="welcome_hindi">स्वागत</string>
	<string name="welcome_string_hindi">आपकी राय हमारे लिए महत्वपूर्ण है</string>
	<string name="select_your_const_area">अपना विधानसभा क्षेत्र चुनें</string>
	<string name="choose_const_area">--विधानसभा क्षेत्र--</string>
	<string name="current_mla">वर्तमान विधायक</string>
	<string name="current_party">वर्तमान पार्टी</string>
	<string name="write_area_name">अपने क्षेत्र का नाम लिखें</string>
	<string name="write_candidate_name">उम्मीदवारों का नाम लिखें</string>
	<string name="choose_cm">अपने मुख्यमंत्री के रूप में किसके चुनाव करेंगे</string>
	<string name="choose_party">आप किस पार्टी को वोट देंगे</string>
	<string name="choose_mla">अपने विधायक के रूप में किसके चुनाव करेंगे</string>
	<string name="update_hindi">अपडेट करें</string>
	<string name="cm_voted_successfully">मुख्यमंत्री की अपनी राय दर्ज की गई है</string>
	<string name="party_voted_successfully">पार्टी की अपनी राय दर्ज की गई है</string>
	<string name="add_to_list">सूची में जोड़ें</string> 
	<string name="correct_your_choice">सूची से चुनें या सही नाम लिखें</string>
	<string name="mla_voted_successfully">विधायक की अपनी राय दर्ज की गई है</string>
	<string name="mla_already_in_list">विधायक सूची में पहले से ही है</string>
	<string name="thank_you">धन्यवाद</string>
	<string name="poll_again">मतदान दोहराएँ</string>
	
</resources>