<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation = "vertical">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/company"
        android:src="@drawable/kat_logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/welcome_hindi"
        android:src="@drawable/swagat_icon" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/welcome_hindi"
        android:src="@drawable/shadow" />

    <TextView
        android:id="@+id/volunteer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_string_hindi"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/go_next_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="25dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/welcome_hindi"
        android:onClick="onClick"
        android:src="@drawable/arrow" />

</LinearLayout>