<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 	android:background="@drawable/background"
    android:orientation = "vertical"
     >
     
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
         android:contentDescription="@string/company"
         android:src="@drawable/kat_logo" />

     <LinearLayout
         android:layout_width="190dp"
         android:layout_height="170dp"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
         android:background="@drawable/blue_bar"
         android:orientation="vertical" >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_marginBottom="6dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="6dp"
             android:layout_weight="1.0"
             android:orientation="vertical"
             android:paddingLeft="-1dp"
             android:paddingRight="-1dp" >

             <TextView
                 android:id="@+id/volunteer_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:text="@string/admin_login"
                 android:textColor="@color/white"
                 android:typeface="sans" />
             
       <ImageView
           android:id="@+id/imageView6"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="1dp"
           android:contentDescription="@string/welcome_hindi"
           android:src="@drawable/line" />
             
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal" >
             
            <ImageView
        	android:id="@+id/imageView3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"
       		android:contentDescription="@string/welcome_hindi"
       		android:src="@drawable/user_icon" />
                
             <EditText
                 android:id="@+id/input_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_username"
                 android:inputType="text"
                 android:textColor="@android:color/primary_text_dark_nodisable"
                 android:textSize="14sp"
                 android:textStyle="normal"
                 android:typeface="serif" />
             
             </LinearLayout>
             
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="-2dp"
                android:orientation="horizontal" >
             
            <ImageView
        	android:id="@+id/imageView4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"
       		android:contentDescription="@string/welcome_hindi"
       		android:src="@drawable/lock_icon" />
             
               <EditText
                   android:id="@+id/input_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="2dp"
                   android:hint="@string/enter_password"
                   android:inputType="textPassword"
                   android:textColor="@android:color/primary_text_dark_nodisable"
                   android:textSize="14sp"
                   android:textStyle="normal"
                   android:typeface="serif" />
               </LinearLayout>

            <Button
                android:id="@+id/login"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/background_light"
                android:minHeight="20dp"
                android:minWidth="40dp"
                android:onClick="onClick"
                android:text="@string/login"
                android:textSize="11sp"
                android:typeface="serif" />
            
           <ImageView
               android:id="@+id/imageView7"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:contentDescription="@string/welcome_hindi"
               android:src="@drawable/line_inverse" />

         </LinearLayout>
     </LinearLayout>
  
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/welcome_hindi"
        android:src="@drawable/shadow" />
    
</LinearLayout>