<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 	android:background="@drawable/background"
    android:orientation = "vertical"
     >
     
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
         android:contentDescription="@string/company"
         android:src="@drawable/kat_logo" />

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="170dp"
         android:layout_gravity="center"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="40dp"
         android:orientation="vertical" >
             
            <LinearLayout
                android:id="@+id/admin_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_bar"
                android:onClick="onClick"
                android:orientation="horizontal" >
             
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:contentDescription="@string/welcome_hindi"
                android:src="@drawable/administrator_icon" />
                
             <TextView
                 android:id="@+id/textview1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="7dp"
                 android:hint="@string/admin_login"
                 android:text="@string/admin_login"
                 android:textColor="@color/white"
                 android:textColorLink="@color/white"
                 android:textSize="20sp"
                 android:textStyle="normal"
                 android:typeface="serif" />
             
             </LinearLayout>
             
            <LinearLayout
                android:id="@+id/guest_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/blue_bar"
                android:onClick="onClick"
                android:orientation="horizontal" >
             
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:contentDescription="@string/welcome_hindi"
                android:src="@drawable/administrator_icon" />
             
               <TextView
                   android:id="@+id/textview2"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:layout_marginRight="15dp"
                   android:layout_marginTop="7dp"
                   android:hint="@string/guest_login"
                   android:text="@string/guest_login"
                   android:textColor="@color/white"
                   android:textColorLink="@color/white"
                   android:textSize="20sp"
                   android:textStyle="normal"
                   android:typeface="serif" />

               </LinearLayout>

     
     </LinearLayout>
    
</LinearLayout>